new update on this repo to assist with ritvik's data extraction process

--- a/prism_concat_notebook.ipynb
+++ b/prism_concat_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,6 +1978,62 @@
    "source": [
     "# Save the merged DataFrame to a new CSV file\n",
     "df.to_csv(\"Min_Temperature_data_big_watershed.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of file names\n",
+    "file_names = [r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_max_smallwatershed_2018.csv\",\n",
+    "               r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_max_smallwatershed_2019.csv\", \n",
+    "               r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_max_smallwatershed_2020.csv\",\n",
+    "                 r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_max_smallwatershed_2021.csv\", \n",
+    "                 r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_max_smallwatershed_2022.csv\"\n",
+    "                 ]\n",
+    "\n",
+    "# Read the first CSV file\n",
+    "df = pd.read_csv(file_names[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the merged DataFrame to a new CSV file\n",
+    "df.to_csv(\"Max_Temperature_data_small_watershed.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of file names\n",
+    "file_names = [r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_min_smallwatershed_2018.csv\",\n",
+    "               r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_min_smallwatershed_2019.csv\", \n",
+    "               r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_min_smallwatershed_2020.csv\",\n",
+    "                 r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_min_smallwatershed_2021.csv\", \n",
+    "                 r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\temp_min_smallwatershed_2022.csv\"\n",
+    "                 ]\n",
+    "\n",
+    "# Read the first CSV file\n",
+    "df = pd.read_csv(file_names[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the merged DataFrame to a new CSV file\n",
+    "df.to_csv(\"Min_Temperature_data_small_watershed.csv\", index=False)"
    ]
   }
  ],
