--- a/prism_data_2022_notebook.ipynb
+++ b/prism_data_2022_notebook.ipynb
@@ -1448,10 +1448,141 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prism_2022 = pd.read_csv(r\"C:\\Users\\interactwel\\Desktop\\PRISM datasets\\excel_to_text_script_folder\\PRISM_tmin_tmax_stable_4km_2022.csv\", header=10)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# creating new columns of temp min  data for each location\n",
+    "date_prism = prism_2022['Date'][prism_2022['Name'] == 'Location 1']\n",
+    "tm_1 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 1']\n",
+    "tm_2 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 2']\n",
+    "tm_3 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 3']\n",
+    "tm_4 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 4']\n",
+    "tm_5 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 5']\n",
+    "tm_6 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 6']\n",
+    "tm_7 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 7']\n",
+    "tm_8 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 8']\n",
+    "tm_9 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 9']\n",
+    "tm_10 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 10']\n",
+    "tm_11 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 11']\n",
+    "tm_12 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 12']\n",
+    "tm_13 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 13']\n",
+    "tm_14 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 14']\n",
+    "tm_15 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 15']\n",
+    "tm_16 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 16']\n",
+    "tm_17 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 17']\n",
+    "tm_18 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 18']\n",
+    "tm_19 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 19']\n",
+    "tm_20 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 20']\n",
+    "tm_21 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 21']\n",
+    "tm_22 = prism_2022['tmin (degrees C)'][prism_2022['Name'] == 'Location 22']\n",
+    "\n",
+    "\n",
+    "date_prism.reset_index(drop=True, inplace=True)\n",
+    "tm_1.reset_index(drop=True, inplace=True)\n",
+    "tm_2.reset_index(drop=True, inplace=True)\n",
+    "tm_3.reset_index(drop=True, inplace=True)\n",
+    "tm_4.reset_index(drop=True, inplace=True)\n",
+    "tm_5.reset_index(drop=True, inplace=True)\n",
+    "tm_6.reset_index(drop=True, inplace=True)\n",
+    "tm_7.reset_index(drop=True, inplace=True)\n",
+    "tm_8.reset_index(drop=True, inplace=True)\n",
+    "tm_9.reset_index(drop=True, inplace=True)\n",
+    "tm_10.reset_index(drop=True, inplace=True)\n",
+    "tm_11.reset_index(drop=True, inplace=True)\n",
+    "tm_12.reset_index(drop=True, inplace=True)\n",
+    "tm_13.reset_index(drop=True, inplace=True)\n",
+    "tm_14.reset_index(drop=True, inplace=True)\n",
+    "tm_15.reset_index(drop=True, inplace=True)\n",
+    "tm_16.reset_index(drop=True, inplace=True)\n",
+    "tm_17.reset_index(drop=True, inplace=True)\n",
+    "tm_18.reset_index(drop=True, inplace=True)\n",
+    "tm_19.reset_index(drop=True, inplace=True)\n",
+    "tm_20.reset_index(drop=True, inplace=True)\n",
+    "tm_21.reset_index(drop=True, inplace=True)\n",
+    "tm_22.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "\n",
+    "temperature_min_prism_data =  pd.DataFrame({'date_prism': date_prism, 'tm_1': tm_1, 'tm_2': tm_2, 'tm_3': tm_3, 'tm_4': tm_4, 'tm_5': tm_5, 'tm_6': tm_6, 'tm_7': tm_7, 'tm_8': tm_8, 'tm_9': tm_9, 'tm_10': tm_10, 'tm_11': tm_11, 'tm_12': tm_12, 'tm_13': tm_13, 'tm_14': tm_14, 'tm_15': tm_15, 'tm_16': tm_16, 'tm_17': tm_17, 'tm_18': tm_18, 'tm_19': tm_19, 'tm_20': tm_20, 'tm_21': tm_21, 'tm_22': tm_22})\n",
+    "\n",
+    "\n",
+    "temperature_min_prism_data.to_csv('temp_min_smallwatershed_2022.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Temperature Maximum Extraction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating new columns of temp min  data for each location\n",
+    "# date_prism = prism_2018['Date'][prism_2018['Name'] == 'Location 1']\n",
+    "tmax_1 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 1']\n",
+    "tmax_2 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 2']\n",
+    "tmax_3 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 3']\n",
+    "tmax_4 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 4']\n",
+    "tmax_5 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 5']\n",
+    "tmax_6 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 6']\n",
+    "tmax_7 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 7']\n",
+    "tmax_8 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 8']\n",
+    "tmax_9 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 9']\n",
+    "tmax_10 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 10']\n",
+    "tmax_11 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 11']\n",
+    "tmax_12 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 12']\n",
+    "tmax_13 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 13']\n",
+    "tmax_14 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 14']\n",
+    "tmax_15 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 15']\n",
+    "tmax_16 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 16']\n",
+    "tmax_17 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 17']\n",
+    "tmax_18 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 18']\n",
+    "tmax_19 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 19']\n",
+    "tmax_20 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 20']\n",
+    "tmax_21 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 21']\n",
+    "tmax_22 = prism_2022['tmax (degrees C)'][prism_2022['Name'] == 'Location 22']\n",
+    "\n",
+    "\n",
+    "# date_prism.reset_index(drop=True, inplace=True)\n",
+    "tmax_1.reset_index(drop=True, inplace=True)\n",
+    "tmax_2.reset_index(drop=True, inplace=True)\n",
+    "tmax_3.reset_index(drop=True, inplace=True)\n",
+    "tmax_4.reset_index(drop=True, inplace=True)\n",
+    "tmax_5.reset_index(drop=True, inplace=True)\n",
+    "tmax_6.reset_index(drop=True, inplace=True)\n",
+    "tmax_7.reset_index(drop=True, inplace=True)\n",
+    "tmax_8.reset_index(drop=True, inplace=True)\n",
+    "tmax_9.reset_index(drop=True, inplace=True)\n",
+    "tmax_10.reset_index(drop=True, inplace=True)\n",
+    "tmax_11.reset_index(drop=True, inplace=True)\n",
+    "tmax_12.reset_index(drop=True, inplace=True)\n",
+    "tmax_13.reset_index(drop=True, inplace=True)\n",
+    "tmax_14.reset_index(drop=True, inplace=True)\n",
+    "tmax_15.reset_index(drop=True, inplace=True)\n",
+    "tmax_16.reset_index(drop=True, inplace=True)\n",
+    "tmax_17.reset_index(drop=True, inplace=True)\n",
+    "tmax_18.reset_index(drop=True, inplace=True)\n",
+    "tmax_19.reset_index(drop=True, inplace=True)\n",
+    "tmax_20.reset_index(drop=True, inplace=True)\n",
+    "tmax_21.reset_index(drop=True, inplace=True)\n",
+    "tmax_22.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "\n",
+    "temperature_max_prism_data =  pd.DataFrame({'date_prism': date_prism, 'tmax_1': tmax_1, 'tmax_2': tmax_2, 'tmax_3': tmax_3, 'tmax_4': tmax_4, 'tmax_5': tmax_5, 'tmax_6': tmax_6, 'tmax_7': tmax_7, 'tmax_8': tmax_8, 'tmax_9': tmax_9, 'tmax_10': tmax_10, 'tmax_11': tmax_11, 'tmax_12': tmax_12, 'tmax_13': tmax_13, 'tmax_14': tmax_14, 'tmax_15': tmax_15, 'tmax_16': tmax_16, 'tmax_17': tmax_17, 'tmax_18': tmax_18, 'tmax_19': tmax_19, 'tmax_20': tmax_20, 'tmax_21': tmax_21, 'tmax_22': tmax_22})\n",
+    "\n",
+    "\n",
+    "\n",
+    "temperature_max_prism_data.to_csv('temp_max_smallwatershed_2022.csv', index=False)"
    ]
   },
   {
